# remoria

./: .env.example  AI_CONTEXT.md  manage.py  pyproject.toml
accounts/migrations/: 0001_initial.py
docs/adr/: 001-platform-options-comparison-and-decision.md  002-core-platform-and-media-storage-on-aws.md  003-application-architecture-and-initial-scope.md  004-python-linting-formatting-and-type-checking.md  005-python-dependency-management.md  006-backend-framework-selection.md
remoria/: asgi.py  settings.py  urls.py  wsgi.py
